--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,15 @@
 resources/fonts/Ubuntu-Regular-30.png filter=lfs diff=lfs merge=lfs -text
 resources/fonts/Ubuntu-Regular.ttf filter=lfs diff=lfs merge=lfs -text
+resources-semi-octagon-176x176/fonts/Ubuntu-Regular-19.png filter=lfs diff=lfs merge=lfs -text
+resources-semi-round-215x180/fonts/Ubuntu-Regular-19.png filter=lfs diff=lfs merge=lfs -text
+resources-rectangle-320x360/fonts/Ubuntu-Regular-34.png filter=lfs diff=lfs merge=lfs -text
+resources-round-260x260/fonts/Ubuntu-Regular-28.png filter=lfs diff=lfs merge=lfs -text
+resources-round-454x454/fonts/Ubuntu-Regular-49.png filter=lfs diff=lfs merge=lfs -text
+resources-rectangle-240x240/fonts/Ubuntu-Regular-26.png filter=lfs diff=lfs merge=lfs -text
+resources-round-218x218/fonts/Ubuntu-Regular-23.png filter=lfs diff=lfs merge=lfs -text
+resources-round-240x240/fonts/Ubuntu-Regular-26.png filter=lfs diff=lfs merge=lfs -text
+resources-round-280x280/fonts/Ubuntu-Regular-30.png filter=lfs diff=lfs merge=lfs -text
+resources-round-360x360/fonts/Ubuntu-Regular-39.png filter=lfs diff=lfs merge=lfs -text
+resources-round-390x390/fonts/Ubuntu-Regular-42.png filter=lfs diff=lfs merge=lfs -text
+resources-rectangle-148x205/fonts/Ubuntu-Regular-16.png filter=lfs diff=lfs merge=lfs -text
+resources-round-416x416/fonts/Ubuntu-Regular-45.png filter=lfs diff=lfs merge=lfs -text
