--- a/.gitattributes
+++ b/.gitattributes
@@ -23,3 +23,4 @@ resources/graphics/PiechartTimeStacked.png filter=lfs diff=lfs merge=lfs -text
 resources/graphics/PiechartTimeConcentric.png filter=lfs diff=lfs merge=lfs -text
 resources/graphics/PiechartTimeHero-small.png filter=lfs diff=lfs merge=lfs -text
 resources/graphics/PiechartTimeStandard.png filter=lfs diff=lfs merge=lfs -text
+resources/graphics/PiechartTimeDiminishing.png filter=lfs diff=lfs merge=lfs -text
